添加自动补全关键字; 修复send方法会偶尔乱码的问题;

--- a/web/css/ourjs.css
+++ b/web/css/ourjs.css
@@ -1015,6 +1015,12 @@ label.error {
 
 
 
+.ms-ctn {
+  background: #fff;
+  border: solid 1px #ccc;
+}
+
+
 
 /*for mobile device*/
 @media (max-width: 979px) {
