Number.isInteger 在低版本的NodeJS中不支持

--- a/web/home.tmpl
+++ b/web/home.tmpl
@@ -28,7 +28,7 @@
         {{~ it.articles:article:index }}
         <li>
           <div class="num">{{=(article.replies || []).length}}</div>
-          <a class="avatar"><img src="http://www.gravatar.com/avatar/{{=article.avatar}}"></a>
+          <a class="avatar"><img src="http://www.gravatar.com/avatar/{{=article.poster}}"></a>
           <div class="content">
             {{?article.verify=='1'}}
             <i class="icon-star-empty"></i>
