--- a/web/home.tmpl
+++ b/web/home.tmpl
@@ -37,7 +37,7 @@
           </div>
           <div class="info">
             • <a href="/user/{{=article.poster}}" target="_blank">{{=article.poster}}</a>
-            • <span class="formatdate">{{=article.replyTime || article.postDate || 0}}</span>
+            • <span class="formatdate">{{=article.replyTime || article.postTime || 0}}</span>
             {{?article.keyword}} • {{=article.keyword}} {{?}}
           </div>
         </li>
