--- a/web/user.tmpl
+++ b/web/user.tmpl
@@ -42,7 +42,7 @@
           <div class="note">
             <a class="keyword" target="_blank" href="/bbs/{{=article.keyword}}">{{=article.keyword || ''}}</a>
             by <a class="author" href="/user/{{=article.poster}}" target="_blank">{{=article.poster}}</a>
-            <span class="formatdate date">{{=article.postDate || ''}}</span>
+            <span class="formatdate date">{{=article.postTime || ''}}</span>
           </div>
         </div>
         {{~}}
