--- a/web/home.tmpl
+++ b/web/home.tmpl
@@ -46,6 +46,20 @@
           </div>
         </li>
         {{~}}
+        <!--Google广告|可删除或替换成你自己的-->
+        <li style="margin: 0;padding: 4px 0;">
+          <div style="height:90px;overflow:hidden">
+            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+            <ins class="adsbygoogle"
+                 style="display:block"
+                 data-ad-client="ca-pub-1941367294435664"
+                 data-ad-slot="2234709637"
+                 data-ad-format="auto"></ins>
+            <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+          </div>
+        </li>
       </ul>
       <div class="pagination">{{=it.pagination || ''}}</div>
     </div>
