update layouts and README.md

--- a/web/home.tmpl
+++ b/web/home.tmpl
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
 <meta charset="utf-8">
-<title>anynb 股市牛博汇</title>
+<title>AnyNB 股市牛博汇</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="keywords" content="">
 <meta name="description" content="">
@@ -70,13 +70,15 @@
         <li class="divider"></li>
         <li class="nav-header">微信订阅</li>
         <li class="text-center">
-          <div style="margin:14px;">
+          <div style="margin:14px;min-height:246px">
             <img src="/img/weixin.jpg" alt="ourjs官方微信号" width="254" height="254" style="border: solid 1px #666;" />
             </div>
           <div style="margin:24px 14px;text-align:left;font-size:16px;">
-            我们的微信公众号: <b>anynb-com</b> 或 <b>ourjs</b>
+            我们的微信公众号:
             <br>
-            打开微信扫一扫即可关注我们，在微信上随时查看牛人们的观点
+            <b>ourjs</b> 或 <b>anynb-com</b>
+            <br>
+            打开微信扫一扫即可关注我们，随时查看牛人们的最新观点
           </div>
         </li>
         <li class="divider"></li>
