--- a/web/article.tmpl
+++ b/web/article.tmpl
@@ -88,7 +88,7 @@
       <br><br><br>
 
       <div id="comments"></div>
-      <wb:comments url="http://anynb.com/article/{{=it.article.id}}" border="n" width="auto" appkey="3266919690" ></wb:comments>
+      <wb:comments url="http://anynb.com/article/{{=it.article.id}}" brandline="y" border="n" width="auto" appkey="1790183529" ></wb:comments>
       <br><br><br>
 
     </div>
@@ -111,7 +111,7 @@
 <!--#include="script.part"-->
 <!--Powered By OurJS -->
 
-<script type="text/javascript" src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js?appkey=3266919690" charset="utf-8"></script>
+<script type="text/javascript" src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js?appkey=1790183529" charset="utf-8"></script>
 <script type="text/javascript" src="http://v3.jiathis.com/code/jia.js?uid=1862627" charset="utf-8"></script>
 
 </body>
