--- a/web/article.tmpl
+++ b/web/article.tmpl
@@ -34,7 +34,7 @@
       <div id="summary">
         <b>发布</b>
         <a href="/user/{{=it.article.poster || ''}}" target="_blank">{{=it.article.poster || ''}}</a>&nbsp;
-        <span class="formatdate date">{{=it.article.postTime || ''}}</span>
+        <span class="formatdate">{{=it.article.postTime || ''}}</span>
 
         {{?it.article.keyword}}
           &nbsp;&nbsp;<b>关键字</b>
