直接访问原文地址前访问量+1，方便做排行榜

--- a/web/home.tmpl
+++ b/web/home.tmpl
@@ -41,7 +41,7 @@
             {{?article.content}}
             <a href="/article/{{=article.id}}" target="_blank">{{=article.title || ''}}</a>
             {{??}}
-            <i class="icon-tags"></i> <a href="{{=article.url}}" target="_blank">{{=article.title || ''}}</a>
+            <i class="icon-tags"></i> <a href="/redirect/{{=article.id}}" target="_blank">{{=article.title || ''}}</a>
             {{?}}
           </div>
           <div class="info">
