--- a/web/home.tmpl
+++ b/web/home.tmpl
@@ -17,7 +17,7 @@
 <div class="container">
   <div class="row-fluid">
     <div class="span12">
-      <div style="background:#efefef;font-size:16px;text-align:center;margin:0 0 24px;line-height:44px">股市有风险，投资需紧慎</div>
+      <div style="background:#efefef;font-size:16px;text-align:center;margin:0 0 24px;line-height:44px">股市有风险，投资需谨慎</div>
     </div>
   </div>
 
