--- a/web/edit.tmpl
+++ b/web/edit.tmpl
@@ -56,6 +56,15 @@
               <textarea id="content" rows="24" name="content" placeholder="文章正文" class="editor" style="width:100%"></textarea>
             </div>
           </div>
+          <br>
+          <div class="control-group">
+            <label class="control-label" for="holdTime">举办时间</label>
+            <div class="controls">
+              <div class="span8">
+                <input id="holdTime" class="datetime" type="text" name="holdTime" > [投资日历、可不填]
+              </div>
+            </div>
+          </div>
         </div>
 
         <div class="text-center row">
