Fix bug: 投资日历无法在默认首页显示 更新layout

--- a/web/css/ourjs.css
+++ b/web/css/ourjs.css
@@ -1085,6 +1085,10 @@ label.error {
   overflow: hidden;
 }
 
+.layout-pane li a i {
+  margin-right: 18px;
+}
+
 .layout-pane .btn-primary {
   color: #fff;
 }
