Fix bug and Update layouts

--- a/web/css/ourjs.css
+++ b/web/css/ourjs.css
@@ -1088,6 +1088,8 @@ label.error {
 
 .layout-pane li a i {
   margin-right: 18px;
+  display: inline-block;
+  width: 60px;
 }
 
 .layout-pane .btn-primary {
