--- a/web/home.tmpl
+++ b/web/home.tmpl
@@ -82,7 +82,7 @@
     <div class="span4">
       <div class="nav-separator"></div>
       <ul class="dropdown-menu layout-pane">
-        <li class="nav-header">本月投资日历</a></li>
+        <li class="nav-header">投资日历－未来30天</a></li>
         <li class="divider"></li>
         {{~ it.eventArticles:article:index}}
         <li>
